...
                      padding: const EdgeInsets.symmetric(vertical: 12),
                      decoration: BoxDecoration(
                        border: Border.all(color: AppColors.accent),
                        borderRadius: BorderRadius.circular(14),
                      ),
                      child: Text(
                        'Hapus Dompet',
                        textAlign: TextAlign.center,
                        style: AppTheme.body(fontSize: 12, fontWeight: FontWeight.bold, color: AppColors.accent),
                      ),
                    ),
                  ),
                ),
...
